# MLOps_TallerUV-DockerCompose

./: .gitignore  Dockerfile  Dockerfile.api  README.md  docker-compose.yaml  pyproject.toml
api/: Dockerfile
api/penguin_predict/: main.py
jupyter/: Dockerfile
models/: gb.joblib  logreg.joblib  registry.json  svm.joblib
notebooks/: entrenamiento_pinguinos.ipynb
