[project]
name = "mlops-taller2"
version = "0.1.0"
description = "Entorno unificado para entrenamiento y despliegue de modelos de pingüinos con JupyterLab y FastAPI"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Jupyter / análisis
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "palmerpenguins",

    # API / serving
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0"
]